# gensalatest

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  version.h  version_defs.h.in
acanthis/: CMakeLists.txt  aqmapviewmodel.cpp  aqmapviewmodel.h  attributeitem.h  attributelayer.cpp  attributelayer.h  attributemodel.cpp  attributemodel.h  coreapplication.cpp  coreapplication.h  documentmanager.cpp  documentmanager.h  graphdocument.cpp  graphdocument.h  graphmodel.cpp  graphmodel.h  graphviewmodel.h  interfaceversion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowfactory.cpp  mainwindowfactory.h  maplayer.cpp  maplayer.h  maplayery.h  mapmodel.cpp  mapmodel.h  pixelmaplayer.cpp  pixelmaplayer.h  resource.qrc  settings.h  settingsimpl.cpp  settingsimpl.h  shapegraphlayer.cpp  shapegraphlayer.h  shapemaplayer.cpp  shapemaplayer.h  treeitem.cpp  treeitem.h
acanthis/UI/: licenseagreement.ui
acanthis/agl/: CMakeLists.txt
acanthis/agl/base/: agldynamicline.h  agldynamicrect.cpp  agldynamicrect.h  agllines.cpp  agllinesuniform.cpp  aglobject.h  aglrastertexture.h  agltriangles.h
acanthis/agl/composite/: aglgraph.cpp  aglgraph.h  aglmap.h  aglpixelmap.h  aglshapegraph.h  aglshapemap.cpp  aglshapemap.h
acanthis/aglmapview/: CMakeLists.txt  agldynamicline.cpp  agldynamicline.h  agldynamicrect.cpp  agldynamicrect.h  aglgraph.cpp  aglgraph.h  agllines.cpp  agllines.h  agllinesuniform.h  aglmap.h  aglmapview.cpp  aglmapview.h  aglmapviewrenderer.cpp  aglmapviewrenderer.h  aglobjects.h  aglpixelmap.cpp  aglpixelmap.h  aglpolygons.cpp  aglpolygons.h  aglrastertexture.cpp  aglrastertexture.h  aglregularpolygons.cpp  aglregularpolygons.h  aglshapegraph.cpp  aglshapegraph.h  aglshapemap.h  agltriangles.cpp  agltriangles.h  agltrianglesuniform.cpp  agltrianglesuniform.h  aglutriangulator.h
acanthis/dialogs/: CMakeLists.txt  licenseagreement.cpp  licenseagreement.h  licenseagreement.ui
acanthis/glmapview/: CMakeLists.txt  gldynamicline.cpp  gldynamicline.h  gldynamicrect.cpp  gldynamicrect.h  gllines.cpp  gllines.h  gllinesuniform.cpp  gllinesuniform.h  glmap.h  glmapview.cpp  glmapview.h  glmapviewrenderer.cpp  glmapviewrenderer.h  glpixelmap.cpp  glpixelmap.h  glpolygons.cpp  glpolygons.h  glrastertexture.cpp  glrastertexture.h  glregularpolygons.cpp  glregularpolygons.h  glshapegraph.cpp  glshapegraph.h  glshapemap.cpp  glshapemap.h  gltriangles.cpp  gltriangles.h  gltrianglesuniform.cpp  gltrianglesuniform.h  glutriangulator.cpp  glutriangulator.h
acanthis/resources/: Info.plist
acanthis/scenegraph/: AGLMapViewWrapper.qml  AGLMapViewportWrapper.qml  AGLSplitView.qml  AttributePanel.qml  GraphDisplay.qml  MainToolBar.qml  MainWindow.qml  MapDelegate.qml  MapPanel.qml  MapTreeView.qml  Panel.qml  PanelHandle.qml  RowActionButton.qml  TableViewColumn.qml  Theme.qml  TopBar.qml  TreeView.qml  UiConstants.qml  ViewListModel.qml  main.qml  mainMobile.qml
cliTest/: CMakeLists.txt  argumentholder.h  main.cpp  selfcleaningfile.h  testagentparser.cpp  testargumentholder.cpp  testaxialparser.cpp  testcommandlineparser.cpp  testexportparser.cpp  testimportparser.cpp  testisovistparser.cpp  testlinkparser.cpp  testmapconvertparser.cpp  testparsingutils.cpp  testperformancewriter.cpp  testradiusconverter.cpp  testsegmentparser.cpp  testsegmentshortestpathparser.cpp  testselfcleaningfile.cpp  testsimpletimer.cpp  teststepdepthparser.cpp  testvgaparser.cpp  testvisprepparser.cpp
depthmapX/: CMakeLists.txt  GraphDoc.cpp  GraphDoc.h  coreapplication.cpp  coreapplication.h  imainwindowmodule.h  imainwindowmodulefactory.h  imainwindowplugin.h  interfaceversion.h  mainwindow.cpp  mainwindow.h  mainwindowhelpers.cpp  mainwindowhelpers.h  mainwindowmoduleregistry.cpp  mainwindowmoduleregistry.hpp  mainwindowplugin.cpp  mainwindowplugin.h  mainwindowpluginfactory.cpp  mainwindowpluginfactory.hpp  mainwindowpluginregistry.cpp  mainwindowpluginregistry.hpp  renderthread.cpp
depthmapX/UI/: AgentAnalysisDlg.ui
depthmapX/dialogs/: AgentAnalysisDlg.cpp  AgentAnalysisDlg.h  AttributeChooserDlg.h  AxialAnalysisOptionsDlg.h  ColourScaleDlg.cpp  ColourScaleDlg.h  ColumnPropertiesDlg.h  InsertColumnDlg.h  LayerChooserDlg.h  MakeLayerDlg.h  OptionsDlg.h  PushDialog.h  SegmentAnalysisDlg.h
depthmapX/views/: mapview.h  viewhelpers.cpp  viewhelpers.h
depthmapXcli/: CMakeLists.txt  agentparser.cpp  agentparser.h  axialparser.cpp  axialparser.h  commandlineparser.cpp  commandlineparser.h  exceptions.h  exportparser.cpp  exportparser.h  imodeparser.h  imodeparserfactory.h  importparser.cpp  importparser.h  interfaceversion.h  isovistparser.cpp  isovistparser.h  linkparser.cpp  linkparser.h  main.cpp  mapconvertparser.cpp  mapconvertparser.h  modeparserregistry.cpp  modeparserregistry.h  parsingutils.cpp  parsingutils.h  performancesink.h  performancewriter.cpp  performancewriter.h  printcommunicator.cpp  printcommunicator.h  radiusconverter.cpp  radiusconverter.h  runmethods.cpp  runmethods.h  segmentparser.cpp  segmentparser.h  segmentshortestpathparser.cpp  segmentshortestpathparser.h  simpletimer.h  (+6 more)
depthmapXcli/salaobj/: CMakeLists.txt  attributemapcli.h  metagraphcli.cpp  metagraphcli.h  options.h  pointmapcli.cpp  pointmapcli.h  shapegraphcli.cpp  shapegraphcli.h  shapemapcli.cpp  shapemapcli.h  shapemapgroupdatacli.h
genlibTest/: CMakeLists.txt  main.cpp  testbspnode.cpp  testcontainerutils.cpp  testreadwritehelpers.cpp  testsimplematrix.cpp  teststringutils.cpp
moduleTest/: CMakeLists.txt  main.cpp
salaTest/: CMakeLists.txt  main.cpp  testattributetable.cpp  testattributetablehelpers.cpp  testattributetableindex.cpp  testattributetableview.cpp  testdxfp.cpp  testentityparsing.cpp  testgeometrygenerators.cpp  testgridproperties.cpp  testisovist.cpp  testisovistdef.cpp  testlayermanager.cpp  testlinkutils.cpp  testmapconversion.cpp  testmapinfodata.cpp  testmgraph.cpp  testpointinpoly.cpp  testpointmap.cpp  testpushvalues.cpp  testsalaprogram.cpp  testsegmentpathscore.cpp  testshapegraphs.cpp  testshapemaps.cpp  testshaperemove.cpp  testsparksieve.cpp  teststructsizes.cpp
(+140 files in other folders)
